# ai4ose-lab1-2026s

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
ch1/: Cargo.toml  README.md  build.rs
ch1/src/: main.rs
ch2/: Cargo.toml  README.md  build.rs
ch2/src/: main.rs
console/: Cargo.toml
console/src/: lib.rs
docs/: lab1-ch1.md  record.md
docs/AI-Chat/: chat_day3.md  chat_day4.md  chat_day5.md  chat_day6.md
docs/Feynman_lecture/: Day3.md  Day4.md  Day5.md  Day6.md
docs/plans/: 6day-README.md  6day-ai-collab-prompts.md  6day-ch1-ch8-personalized-tutorial.md  6day-day1-bootstrap.md  6day-day2-ch3-ex1.md  6day-day3-ch4-ex2.md  6day-day4-ch5-ex3.md  6day-day5-ch6-ex4.md  6day-day6-ch8-final.md  6day-exercise-logbook.md  plan-2.11-16.md
linker/: Cargo.toml  README.md
linker/src/: app.rs  lib.rs
src/: content.txt  main.rs
