[package]
name = "ai4ose-lab1-2026s"
version = "0.1.0"
edition = "2024"
authors = ["chyyuu"]
description = "AI4OSE Lab1: A minimal Rust application for OS kernel learning"
license = "GPL-3.0"
repository = "https://github.com/learningos/ai4ose-lab1-2026s"
readme = "README.md"
keywords = ["os", "kernel", "learning", "AI4OSE","AI"]
categories = ["command-line-utilities"]
